# flow-studio-dev

./: .cspell.json  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  DEMO_RUN.md  GLOSSARY.md  Makefile  README.md  REPO_MAP.md  SUPPORT.md  analyze_python_files.py  pyproject.toml  ux_manifest.json
.claude/: RULES.md  settings.json
.github/: CODEOWNERS  pull_request_template.md
demo/: DEMO_RUN_COMMANDS.jsonl
docs/: ADOPTING_SELFTEST_CORE.md  ADOPTING_SWARM_VALIDATION.md  ADOPTION_PLAYBOOK.md  AGENT_OPS.md  AGENT_SDK_INTEGRATION.md  AGOPS_MANIFESTO.md  BRANCH_PROTECTION_SETUP.md  CI_TROUBLESHOOTING.md  CONFIG_PHASE_1.md  CONTEXT_BUDGETS.md  CONTRIBUTING_DOC_UPDATES.md  DEFINITION_OF_DONE.md  DEMO_RUN_OPERATORS.md  EVALUATION_CHECKLIST.md  FLOWS_INDEX.md  FLOW_PROFILES.md  FLOW_STUDIO.md  FLOW_STUDIO_API.md  FLOW_STUDIO_BUILD_YOUR_OWN.md  FLOW_STUDIO_FIRST_EDIT.md  FLOW_STUDIO_REFACTOR.md  GOLDEN_RUNS.md  (+45 more)
templates/flowstudio-only/: Dockerfile  README.md  pyproject.toml
templates/flowstudio-only/config/agents/: data-fetcher.yaml  data-publisher.yaml  data-transformer.yaml  data-validator.yaml
templates/flowstudio-only/config/flows/: example.yaml
templates/flowstudio-only/flowstudio/: __init__.py  config.py  server.py
templates/selftest-minimal/: README.md  pyproject.toml  selftest.yaml
templates/selftest-minimal/.github/workflows/: selftest.yml
templates/selftest-minimal/selftest/: __main__.py  config.yaml
templates/selftest-minimal/selftest/steps/: .gitkeep
(+1133 files in other folders)
